Fix project title alignment

--- a/themes/leon-overweel-com/static/css/main.css
+++ b/themes/leon-overweel-com/static/css/main.css
@@ -69,7 +69,8 @@ a:hover {
 .project-name {
     font-family: 'Poppins', sans-serif;
     font-size: 1.2rem;
-    margin: 0 0 -0.4rem 0.7rem;
+    margin: 0 0 -6px 0.7rem;
+    vertical-align: baseline;
 }
 
 .project-content {
